add @Transactional(readOnly = true) and stream

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,11 @@ server.error.include-message=always
 
 #H2
 #for memory // basu danih sosdajom
-spring.datasource.url=jdbc:h2:mem:cohort55fs
+#spring.datasource.url=jdbc:h2:mem:cohort55fs
+
+#H2
+#for file// basu danih sosdajom
+spring.datasource.url=jdbc:h2:file:D:\\AIT\\Basic\\Lesson\\Backend_FS\\Urok18\\h2cohort55fs
 
 
 #JPA Hibernate // update  = esli estj to update , esli net to sosdast
