--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.url=jdbc:h2:file:D:\\AIT\\Basic\\Lesson\\Backend_FS\\Urok18\\h
 
 
 #JPA Hibernate // update  = esli estj to update , esli net to sosdast
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # w konsolj pichataet
 spring.jpa.show-sql=true
